[WIP] Fixed margin for details items when Block alignment = right to Simple design

--- a/src/wpzoom-blocks/recipe-card/skins/simple.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/simple.scss
@@ -28,6 +28,10 @@
                 margin-right: 20px;
                 margin-left: 0;
             }
+            .details-items .detail-item {
+                margin-right: 0;
+                margin-left: 15px;
+            }
         }
 
         .recipe-card-image {
